# acl2-jupyter

./: .gitignore  .gitmodules  .guix-channel  Dockerfile  GUIX-README.md  Makefile  PLAN-acl2-kernel.md  README.md  acl2-jupyter.code-workspace  acl2-kernel-spec.md  acl2.ipynb  acl2.scm  manifest.scm  package-lock.json  test-guix-package.sh
.devcontainer/: devcontainer.json
.github/: actionlint.yaml  copilot-instructions.md
.github/workflows/: docker-release.yml
books/acl2-kernel/: Makefile  Makefile-tmp  README.md  cert.acl2  connection.cert  connection.cert.out  connection.fasl  connection.lisp  connection.port  json.cert.out  json.lisp  json.port  kernel-raw.lsp  kernel.cert  kernel.cert.out  kernel.fasl  kernel.lisp  kernel.port  message.cert  message.cert.out  message.fasl  message.lisp  message.port  package.lsp  portcullis.acl2  portcullis.cert  portcullis.cert.out  portcullis.fasl  portcullis.lisp  portcullis.port  pzmq-raw.fasl  pzmq-raw.lsp  pzmq.cert  pzmq.cert.out  pzmq.fasl  pzmq.lisp  pzmq.port  tests.cert  tests.cert.out  tests.fasl  (+10 more)
context/: acl2-customization.lisp  acl2-init.lsp
context/acl2-jupyter-kernel/: EXWORLD-METADATA-PLAN.md  install-kernelspec.sh  (+4 more)
context/script2notebook/: build_boot_strap.py  build_notebooks.py  event_matching.py  inject_boot_metadata.py  lisp2nb-one.sh  lisp2nb.lisp  parser.py  pyproject.toml  test_event_matching.py  test_lisp2nb.lisp  test_lisp2nb_annotations.lisp  test_lisp2nb_vs_python.lisp
context/script2notebook/tests/: test_boot_strap.py  test_build_notebooks.py  test_noformat_grammar.py  test_parser_acl2.py
(+24 files in other folders)
