[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "script2notebook"
version = "0.1.0"
description = "Convert Common Lisp and ACL2 scripts to Jupyter notebooks using tree-sitter"
requires-python = ">=3.11"
license = "BSD-3-Clause"
dependencies = [
    "nbformat>=5.10",
    "tree-sitter>=0.25",
]

# NOTE: tree-sitter-commonlisp is NOT listed here because we use a local
# fork (context/tree-sitter-commonlisp) with block comment fixes that are
# not yet in the PyPI release.  Install it separately:
#   pipx inject script2notebook /path/to/tree-sitter-commonlisp
# The Dockerfile and devcontainer handle this automatically.

[tool.setuptools]
packages = ["script2notebook"]
package-dir = {"script2notebook" = "."}

[project.scripts]
script2notebook = "script2notebook.cli:main"
build-notebooks = "script2notebook.build_notebooks:main"

[project.optional-dependencies]
dev = [
    "pytest>=9",
]
